tests/dataset/tpc-ds/compiler/ex/q71.error
** (SyntaxError) invalid syntax found on /tmp/q71.exs:19:250:
    error: unexpected expression after keyword list. Keyword lists must always come as the last argument. Therefore, this is not allowed:

        function_call(1, some: :option, 2)

    Instead, wrap the keyword in brackets:

        function_call(1, [some: :option], 2)

    Syntax error after: ','
    │
 19 │ 		union_sales = _concat(_concat(for ws <- web_sales, d <- date_dim, ((d.d_date_sk == ws.ws_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: ws.ws_ext_sales_price, item_sk: ws.ws_item_sk, time_sk: ws.ws_sold_time_sk}, for cs <- catalog_sales, d <- date_dim, ((d.d_date_sk == cs.cs_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: cs.cs_ext_sales_price, item_sk: cs.cs_item_sk, time_sk: cs.cs_sold_time_sk}), for ss <- store_sales, d <- date_dim, ((d.d_date_sk == ss.ss_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: ss.ss_ext_sales_price, item_sk: ss.ss_item_sk, time_sk: ss.ss_sold_time_sk})
    │                                                                                                                                                                                                                                                          ^
    │
    └─ /tmp/q71.exs:19:250
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
