tests/dataset/tpc-ds/compiler/ex/q71.ex
# Generated by Mochi compiler v0.10.26 on 2025-07-16T17:36:11Z
defmodule Main do
	@month 12
	@year 1998
	def main do
		# item :: list(map())
		item = [%{i_item_sk: 1, i_brand_id: 10, i_brand: "BrandA", i_manager_id: 1}, %{i_item_sk: 2, i_brand_id: 20, i_brand: "BrandB", i_manager_id: 1}]
		# time_dim :: list(map())
		time_dim = [%{t_time_sk: 1, t_hour: 8, t_minute: 30, t_meal_time: "breakfast"}, %{t_time_sk: 2, t_hour: 18, t_minute: 0, t_meal_time: "dinner"}, %{t_time_sk: 3, t_hour: 12, t_minute: 0, t_meal_time: "lunch"}]
		# date_dim :: list(map())
		date_dim = [%{d_date_sk: 1, d_moy: 12, d_year: 1998}]
		# web_sales :: list(map())
		web_sales = [%{ws_ext_sales_price: 100, ws_sold_date_sk: 1, ws_item_sk: 1, ws_sold_time_sk: 1}]
		# catalog_sales :: list(map())
		catalog_sales = [%{cs_ext_sales_price: 200, cs_sold_date_sk: 1, cs_item_sk: 1, cs_sold_time_sk: 2}]
		# store_sales :: list(map())
		store_sales = [%{ss_ext_sales_price: 150, ss_sold_date_sk: 1, ss_item_sk: 2, ss_sold_time_sk: 1}]
		# union_sales :: list(any())
		union_sales = _concat(_concat(for ws <- web_sales, d <- date_dim, ((d.d_date_sk == ws.ws_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: ws.ws_ext_sales_price, item_sk: ws.ws_item_sk, time_sk: ws.ws_sold_time_sk}, for cs <- catalog_sales, d <- date_dim, ((d.d_date_sk == cs.cs_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: cs.cs_ext_sales_price, item_sk: cs.cs_item_sk, time_sk: cs.cs_sold_time_sk}), for ss <- store_sales, d <- date_dim, ((d.d_date_sk == ss.ss_sold_date_sk)) && (((d.d_moy == @month) && (d.d_year == @year))), do: %{ext_price: ss.ss_ext_sales_price, item_sk: ss.ss_item_sk, time_sk: ss.ss_sold_time_sk})
		# result :: list(map())
		result = (fn ->
	src = item
	rows = _query(src, [
		%{items: union_sales, on: fn i, s -> (s.item_sk == i.i_item_sk) end},
		%{items: time_dim, on: fn i, s, t -> (t.t_time_sk == s.time_sk) end}
	], %{select: fn i, s, t -> Map.merge(Map.merge(Map.merge(i, s), t), %{ i: i, s: s, t: t }) end, where: fn [i, s, t] -> ((i.i_manager_id == 1) && ((t.t_meal_time == "breakfast") || (t.t_meal_time == "dinner"))) end })
	groups = _group_by(rows, fn %{i: i, s: s, t: t} -> %{brand_id: i.i_brand_id, brand: i.i_brand, t_hour: t.t_hour, t_minute: t.t_minute} end)
	items = groups
	items = Enum.sort_by(items, fn g -> [-_sum(for x <- g.items, do: x.s.ext_price), g.key.brand_id] end)
	Enum.map(items, fn g -> %{i_brand_id: g.key.brand_id, i_brand: g.key.brand, t_hour: g.key.t_hour, t_minute: g.key.t_minute, ext_price: _sum(for x <- g.items, do: x.s.ext_price)} end)
end).()
		_json(result)
	end
	defp _concat(a, b) do
  if is_list(a) and is_list(b) do
    a ++ b
  else
    raise "concat expects lists"
  end
end

	defmodule Group do
  defstruct key: nil, items: []
  def fetch(g, k) do
    case k do
      :key -> {:ok, g.key}
      :items -> {:ok, g.items}
      _ -> :error
    end
  end
  def get_and_update(g, k, f) do
    case k do
      :key ->
        {v, nv} = f.(g.key)
        {v, %{g | key: nv}}
      :items ->
        {v, nv} = f.(g.items)
        {v, %{g | items: nv}}
      _ -> {nil, g}
    end
  end
end

	defp _group_by(src, keyfn) do
  {groups, order} = Enum.reduce(src, {%{}, []}, fn it, {groups, order} ->
    key = if is_list(it) do
      arity = :erlang.fun_info(keyfn, :arity) |> elem(1)
      if arity == 1, do: keyfn.(it), else: apply(keyfn, it)
    else
      keyfn.(it)
    end
    ks = :erlang.phash2(key)
    {groups, order} = if Map.has_key?(groups, ks) do
      {groups, order}
    else
      {Map.put(groups, ks, %Group{key: key}), order ++ [ks]}
    end
    val = if is_list(it) and length(it) == 1, do: hd(it), else: it
    groups = Map.update!(groups, ks, fn g -> %{g | items: g.items ++ [val]} end)
    {groups, order}
  end)
  Enum.map(order, fn k -> groups[k] end)
end

	defp _escape_json(<<>>), do: ""
defp _escape_json(<<"\\", rest::binary>>), do: "\\\\" <> _escape_json(rest)
defp _escape_json(<<"\"", rest::binary>>), do: "\\\"" <> _escape_json(rest)
defp _escape_json(<<c::binary-size(1), rest::binary>>), do: c <> _escape_json(rest)
defp _to_json(v) when is_binary(v), do: "\"" <> _escape_json(v) <> "\""
defp _to_json(v) when is_number(v), do: to_string(v)
defp _to_json(v) when is_boolean(v), do: if v, do: "true", else: "false"
defp _to_json(v) when is_list(v), do: "[" <> Enum.map_join(v, ",", &_to_json/1) <> "]"
defp _to_json(v) when is_map(v) do
  keys = Map.keys(v) |> Enum.map(&to_string/1) |> Enum.sort()
  inner = Enum.map_join(keys, ",", fn k -> _to_json(k) <> ":" <> _to_json(Map.get(v, String.to_atom(k), Map.get(v, k))) end)
  "{" <> inner <> "}"
end
defp _to_json(_), do: "null"
defp _json(v), do: IO.puts(_to_json(v))

	defp _query(src, joins, opts \\ %{}) do
  where = Map.get(opts, :where)
  items = Enum.map(src, fn v -> [v] end)
  items = Enum.reduce(joins, items, fn j, items ->
    joined = cond do
      Map.get(j, :right) && Map.get(j, :left) ->
        matched = for _ <- j[:items], do: false
        {res, matched} = Enum.reduce(items, {[], matched}, fn left, {acc, matched} ->
          {acc, matched, m} = Enum.reduce(Enum.with_index(j[:items]), {acc, matched, false}, fn {right, ri}, {acc, matched, m} ->
            keep = (if Map.has_key?(j, :on) and j[:on], do: apply(j[:on], left ++ [right]), else: true)
            if keep do
              matched = List.replace_at(matched, ri, true)
              {acc ++ [left ++ [right]], matched, true}
            else
              {acc, matched, m}
            end
          end)
          acc = (if !m, do: acc ++ [left ++ [nil]], else: acc)
          {acc, matched}
        end)
        Enum.reduce(Enum.with_index(j[:items]), res, fn {right, ri}, acc ->
          if Enum.at(matched, ri) do
            acc
          else
            undef = List.duplicate(nil, (if items == [], do: 0, else: length(hd(items))))
            acc ++ [undef ++ [right]]
          end
        end)
      Map.get(j, :right) ->
        Enum.reduce(j[:items], [], fn right, acc ->
          {acc2, m} = Enum.reduce(items, {acc, false}, fn left, {acc, m} ->
            keep = (if Map.has_key?(j, :on) and j[:on], do: apply(j[:on], left ++ [right]), else: true)
            if keep, do: {acc ++ [left ++ [right]], true}, else: {acc, m}
          end)
          if !m do
            undef = List.duplicate(nil, (if items == [], do: 0, else: length(hd(items))))
            acc2 ++ [undef ++ [right]]
          else
            acc2
          end
        end)
      true ->
        Enum.reduce(items, [], fn left, acc ->
          {acc2, m} = Enum.reduce(j[:items], {acc, false}, fn right, {acc, m} ->
            keep = (if Map.has_key?(j, :on) and j[:on], do: apply(j[:on], left ++ [right]), else: true)
            if keep, do: {acc ++ [left ++ [right]], true}, else: {acc, m}
          end)
          if Map.get(j, :left) && !m do
            acc2 ++ [left ++ [nil]]
          else
            acc2
          end
        end)
    end
    joined
  end)
  items = if where, do: Enum.filter(items, fn r -> where.(r) end), else: items
  items = (if Map.has_key?(opts, :sortKey), do: Enum.sort_by(items, fn r -> apply(opts[:sortKey], r) end), else: items)
  items = (if Map.has_key?(opts, :skip), do: (n = opts[:skip]; (if n < length(items), do: Enum.drop(items, n), else: [])), else: items)
  items = (if Map.has_key?(opts, :take), do: (n = opts[:take]; (if n < length(items), do: Enum.take(items, n), else: items)), else: items)
  Enum.map(items, fn r -> apply(opts[:select], r) end)
end

	defp _sum(v) do
  list = cond do
    is_map(v) and Map.has_key?(v, :items) -> Map.get(v, :items)
    is_list(v) -> v
    true -> raise "sum() expects list or group"
  end
  Enum.sum(list)
end

	end
Main.main()
